errors.txt
cargo :     Checking sql-log-parser v2.0.0 (D:\linh_ta
_linh_tinh\log-helper)
At line:1 char:1
+ cargo check 2>&1 | Out-File -FilePath errors.txt -En
coding ascii
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Chec 
   king sq...inh\log-helper):String) [], RemoteExcep  
  tion
    + FullyQualifiedErrorId : NativeCommandError
 
warning: unexpected `cfg` condition value: `sql`
 --> src\utils\mod.rs:7:7
  |
7 | #[cfg(feature = "sql")]
  |       ^^^^^^^^^^^^^^^ help: remove the condition
  |
  = note: no expected values for `feature`
  = help: consider adding `sql` as a feature in `Cargo
.toml`
  = note: see <https://doc.rust-lang.org/nightly/rustc
/check-cfg/cargo-specifics.html> for more information 
about checking conditional configuration
  = note: `#[warn(unexpected_cfgs)]` on by default

error[E0499]: cannot borrow `client` as mutable more t
han once at a time
   --> src\core\db.rs:342:27
    |
304 |         let mut stream = client.query(sql, &[]).
await?;
    |                          ------ first mutable bo
rrow occurs here
...
342 |              let counts = client.execute(sql, &[
]).await?;
    |                           ^^^^^^ second mutable 
borrow occurs here
...
348 |     }
    |     - first borrow might be used here, when `str
eam` is dropped and runs the destructor for type `Quer
yStream<'_>`

For more information about this error, try `rustc --ex
plain E0499`.
warning: `sql-log-parser` (bin "sql-log-parser") gener
ated 1 warning
error: could not compile `sql-log-parser` (bin "sql-lo
g-parser") due to 1 previous error; 1 warning emitted
